--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -5,5 +5,5 @@
 /* Custom Global Styles */
 body {
   margin: 0;
-  font-family: "Inter", sans-serif; /* Replace with your preferred font */
+  font-family: "Inter", sans-serif; 
 }
