--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -5,6 +5,6 @@
 body {
   margin: 0;
   font-family: var(--font-roboto), sans-serif;
-  background-color: #F8F9FC;
+  background-color: #fafcff;
 }
 
