--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,10 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;600;700&display=swap');
+
+:root {
+  --font-raleway: 'Raleway', sans-serif;
+}
 
 body {
   margin: 0;
   font-family: var(--font-roboto), sans-serif;
   background-color: #fafcff;
+}
+
+html, body {
+  overflow-x: hidden;
+  width: 100%;
 }
 
