refac: code clean up

--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -10,6 +10,7 @@
 body {
   margin: 0;
   font-family: var(--font-roboto), sans-serif;
+  font-family: var(--font-roboto-slab), serif;
   background-color: #fafcff;
 }
 
