--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -11,7 +11,7 @@
 body {
   margin: 0;
   font-family: var(--font-roboto), sans-serif;
-  background-color: #f5fbff;
+  background-color: #fefefb;
 }
 
 html, body {
